Cleanup examples